packages/components/table/style/fixed.less
.@{table-prefix} {
  &-fix {
    &-start,
    &-end {
      z-index: 2;

      td& {
        background-color: var(--ix-color-container-bg);
      }
    }
  }

  &-fix-start-first::after,
  &-fix-start-last::after {
    position: absolute;
    top: 0;
    right: 0;
    bottom: -1px;
    width: 30px;
    transform: translate(100%);
    transition: box-shadow var(--ix-motion-duration-fast);
    content: '';
    pointer-events: none;
  }

  &-fix-end-first::after,
  &-fix-end-last::after {
    position: absolute;
    top: 0;
    bottom: -1px;
    left: 0;
    width: 30px;
    transform: translate(-100%);
    transition: box-shadow var(--ix-motion-duration-fast);
    content: '';
    pointer-events: none;
  }

  &-ping-start &-fix-start-first::after,
  &-ping-start &-fix-start-last::after {
    box-shadow: var(--ix-table-inset-shadow-start);
  }

  &-ping-end &-fix-end-first::after,
  &-ping-end &-fix-end-last::after {
    box-shadow: var(--ix-table-inset-shadow-end);
  }

  &-ping-start &-fix-start-last::before {
    background-color: transparent !important;
  }

  &-cell-ellipsis&-fix-start-last,
  &-cell-ellipsis&-fix-end-first {
    overflow: visible;
  }
}

